[gd_scene load_steps=5 format=3 uid="uid://crbt0ybv05njb"]

[ext_resource type="PackedScene" uid="uid://d11xor0126cnc" path="res://player.tscn" id="1_05og6"]
[ext_resource type="Script" path="res://survivor_game.gd" id="1_kij3l"]
[ext_resource type="PackedScene" uid="uid://b8ay7ic26vfyx" path="res://pine_tree.tscn" id="2_f1a7r"]

[sub_resource type="Curve2D" id="Curve2D_x7qvb"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -252, -330, 0, 0, 0, 0, 649.369, -304.768, 0, 0, 0, 0, 2256, -210, 0, 0, 0, 0, 2256, 508, 0, 0, 0, 0, 2275, 1324, 0, 0, 0, 0, -249, 1324, 0, 0, 0, 0, -240, -317)
}
point_count = 7

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_kij3l")

[node name="ui" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="ui"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="ScoreLabel" type="Label" parent="ui/ColorRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 88
text = "Score :"

[node name="CanvasLayerGame" type="CanvasLayer" parent="."]
layer = -2
follow_viewport_scale = 0.001

[node name="ColorRect" type="ColorRect" parent="CanvasLayerGame"]
offset_right = 2001.0
offset_bottom = 1177.0

[node name="player" parent="." instance=ExtResource("1_05og6")]
position = Vector2(911, 682)

[node name="Path2D" type="Path2D" parent="player"]
position = Vector2(-911, -682)
curve = SubResource("Curve2D_x7qvb")

[node name="PathFollow2D" type="PathFollow2D" parent="player/Path2D"]
unique_name_in_owner = true
position = Vector2(-252, -330)
rotation = 0.0279857

[node name="pine_tree" parent="." instance=ExtResource("2_f1a7r")]
position = Vector2(591, 883)

[node name="pine_tree2" parent="." instance=ExtResource("2_f1a7r")]
position = Vector2(320, 270)

[node name="pine_tree3" parent="." instance=ExtResource("2_f1a7r")]
position = Vector2(1610, 958)

[node name="pine_tree4" parent="." instance=ExtResource("2_f1a7r")]
position = Vector2(1168, 395)

[node name="pine_tree5" parent="." instance=ExtResource("2_f1a7r")]
position = Vector2(1283, 413)

[node name="pine_tree6" parent="." instance=ExtResource("2_f1a7r")]
position = Vector2(1226, 310)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.45
autostart = true

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.670588)

[node name="Label" type="Label" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -11.5
offset_right = 43.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 88
text = "Game Over"

[connection signal="health_depleted" from="player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
